--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ android {
 }
 
 dependencies {
+    def roomVersion = "2.2.0-rc01"
+    def recyclerViewVersion = "1.0.0"
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
@@ -34,5 +36,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "io.reactivex.rxjava2:rxjava:2.2.9"
+    api "androidx.room:room-runtime:$roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$roomVersion"
+    api "androidx.room:room-rxjava2:$roomVersion"
+    implementation "androidx.recyclerview:recyclerview:$recyclerViewVersion"
+    implementation 'com.jakewharton.rxbinding:rxbinding:0.4.0'
 
 }
