--- a/myrxjava/build.gradle
+++ b/myrxjava/build.gradle
@@ -6,4 +6,5 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.9"
     implementation 'junit:junit:4.12'
+    implementation 'org.jetbrains:annotations:15.0'
 }
